# advent-of-code

./: .gitignore  .python-version  README.md  aoc.py  pyproject.toml  requirements.txt
2021/: requirements.txt
2024/: pyproject.toml  requirements.txt
2024/01/: part1.py  part2.py  solution.py
2024/02/: part1.py  part2.py  solution.py
2024/03/: part1.py  part2.py  solution.py
2024/04/: part1.py  part2.py  solution.py
2024/05/: part1.py  part2.py  solution.py
2024/06/: part1.py  part2.py  part2_optimized.py  solution.py
2024/07/: part1.py  part2.py  solution.old.py  solution.py
2024/08/: part1.py  part2.py  solution.py
2024/09/: part1.py  part2.py  solution.py
2024/10/: networkx.py  part1.py  part2.py  solution.py
2024/11/: part1.py  part2.py  recursion.py  solution.py
2024/12/: part1.py  part2.py  solution.py
2024/13/: README.md  part1.py  part2.py  solution.py
2024/14/: part1.py  part2.py  solution.py
2024/15/: part1.py  part2.py  solution.py  test_part2.py
2024/16/: part1.py  part2.py  part2_optimized.py  solution.py
2024/17/: README.md  part1.py  part2.py  solution.py
2024/18/: part1.py  part2.py  solution.py
2024/19/: README.md  index.prof  output.prof  part1.py  part2.py  solution.py
2024/20/: README.md  part1.py  part2.py  solution.py
2024/21/: output.prof  part1.py  part2.py  solution.py
2024/22/: part1.py  part2.py  solution.py  test_part1.py
2024/23/: solution.py
2024/24/: explore.txt  solution.py
2024/25/: solution.py
aoc/: README.md  pyproject.toml
aoc/aoc/: cli.py
aoc/tests/: test_aoc.py
day6/: main.py  (+1 more)
(+549 files in other folders)
