[project]
name = "advent-of-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    'click',
    "colorama",
    'numpy',
    'networkx',
    'matplotlib',
    "sympy>=1.13.3",
    "rich>=13.9.4",
    "argparse>=1.4.0",
    "intervaltree>=3.1.0",
]
