[project]
name = "2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "networkx",
    "matplotlib",
    "scipy",
    "colorama",
    "snakeviz",
    "ruff>=0.8.4",
    "aoc",
]

[tool.uv.sources]
aoc = { path = "../aoc" }
