[project]
name = "aoc"
version = "0.9"
description = "Advent of Code CLI"
readme = "README.md"
authors = [{name = "Steven Terrana"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "requests",
    "python-dotenv",
    "click"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/steven-terrana/aoc"
Changelog = "https://github.com/steven-terrana/aoc/releases"
Issues = "https://github.com/steven-terrana/aoc/issues"
CI = "https://github.com/steven-terrana/aoc/actions"

[project.scripts]
aoc = "aoc.cli:cli"

[project.optional-dependencies]
test = ["pytest"]
